# volume-rendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: fetchvcpkg.cmake
src/: CMakeLists.txt  context.cpp  context.hpp  density.cpp  density.hpp  fluid.cpp  main.cpp  phase.cpp  phase.hpp  primitives.cpp  primitives.hpp  random_gen.cpp  random_gen.hpp  ray.cpp  ray.hpp  scene_tracer.cpp  scene_tracer.hpp  util.cpp  util.hpp  volume.cpp  volume.hpp
